<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_gradient_theme"
        tools:context=".MainActivity">
    <LinearLayout android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:gravity="center_horizontal"
                  android:padding="20dp"
                  android:layout_height="match_parent">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:srcCompat="@drawable/dhl512x512"
                tools:srcCompat="@drawable/dhl512x512"/>

        <TextView
                android:layout_width="130dp"
                android:text="@string/dumaguete_health_line"
                android:textAlignment="center"
                android:padding="5dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="4dp"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="wrap_content"
                android:text="Developed by Algeer Moral of WAVGrafxLab"
                android:textAlignment="center"
                android:padding="2dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="20dp"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="wrap_content"
                android:text="@string/privacy_policy_message"
                android:textAlignment="center"
                android:padding="2dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="wrap_content"
                android:text="PRIVACY POLICY NOTICE"
                android:background="@drawable/bg_centered_textview"
                android:layout_marginTop="5dp"
                android:id="@+id/privacypolicy"
                android:textAlignment="center"
                android:padding="5dp"
                android:layout_height="wrap_content"/>

        <CheckBox
                android:text="I have read the Privacy Policy"
                android:layout_marginTop="10dp"
                android:id="@+id/checkbox_privacypolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="wrap_content"
                android:text="@string/privacy_policy_confirm"
                android:textAlignment="center"
                android:layout_marginTop="40dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:layout_height="wrap_content"/>

        <Button
                android:layout_width="wrap_content"
                android:id="@+id/btnStart"
                android:padding="15dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_button_normal"
                android:textAlignment="center"
                android:text="@string/start"
                android:layout_gravity="center"/>




    </LinearLayout>

</LinearLayout>